; ModuleID = '/home/carl/AnghaBench/git/extr_fsck.c_get_object_name.c'
source_filename = "/home/carl/AnghaBench/git/extr_fsck.c_get_object_name.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.fsck_options = type { i32 }
%struct.object = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i8* (%struct.fsck_options*, %struct.object*)* @get_object_name to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i8* @get_object_name(%struct.fsck_options* %0, %struct.object* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca %struct.fsck_options*, align 8
  %5 = alloca %struct.object*, align 8
  store %struct.fsck_options* %0, %struct.fsck_options** %4, align 8
  store %struct.object* %1, %struct.object** %5, align 8
  %6 = load %struct.fsck_options*, %struct.fsck_options** %4, align 8
  %7 = getelementptr inbounds %struct.fsck_options, %struct.fsck_options* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %11, label %10

10:                                               ; preds = %2
  store i8* null, i8** %3, align 8
  br label %17

11:                                               ; preds = %2
  %12 = load %struct.fsck_options*, %struct.fsck_options** %4, align 8
  %13 = getelementptr inbounds %struct.fsck_options, %struct.fsck_options* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load %struct.object*, %struct.object** %5, align 8
  %16 = call i8* @lookup_decoration(i32 %14, %struct.object* %15)
  store i8* %16, i8** %3, align 8
  br label %17

17:                                               ; preds = %11, %10
  %18 = load i8*, i8** %3, align 8
  ret i8* %18
}

declare dso_local i8* @lookup_decoration(i32, %struct.object*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
